--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@ html, body {
 body { 
 /*     background-image:url(../imagens/fundo-madeira.jpg);
  */ 
-    background-color: beige;
+    background-color: rgba(245, 245, 220, 0.842);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom, top;    
